--- a/app/views/report/months_of_stock_main.html.erb
+++ b/app/views/report/months_of_stock_main.html.erb
@@ -13,7 +13,8 @@
                                      stock_level:<%= values['stock_level'] %> ,
                                      consumption_rate: <%= values['consumption_rate'] %>,
                                      stocked_out: <%= values['stocked_out'] %>,
-                                     active: <%= values['active'] %>
+                                     active: <%= values['active'] %>,
+                                     pack_size: <%= values['pack_size'] %>
                                    };
 
     <% end %>
@@ -157,4 +158,4 @@
 
 <div id="container">
 
-</div>
+</div
