Migrating from MySQL to Couch DB

--- a/app/views/home/map_main.html.erb
+++ b/app/views/home/map_main.html.erb
@@ -7,7 +7,8 @@
     <script type="text/javascript" src="/javascripts/data/districts.js"></script>
     <script type="text/javascript" src="/javascripts/data/sites_by_zones.js"></script>
     <script type="text/javascript" src="/javascripts/data/zones.js"></script>
-    <script type="text/javascript" src="/javascripts/data/district_offsets.js"></script> <script type="text/javascript" src="/assets/data/coords.js"></script>
+    <script type="text/javascript" src="/javascripts/data/district_offsets.js"></script>
+    <!--<script type="text/javascript" src="/assets/data/coords.js"></script>-->
     <script type="text/javascript" src="/javascripts/data/districts.js"></script>
     <script type="text/javascript" src="/javascripts/data/sites_by_zones.js"></script>
     <script type="text/javascript" src="/javascripts/data/zones.js"></script>
