Adding Couch support

--- a/app/views/administration/add_site.html.erb
+++ b/app/views/administration/add_site.html.erb
@@ -56,6 +56,19 @@
         </table>
       </div>
 
+    <div class="form-control-group">
+        <table style="width: 100%;">
+          <tr>
+            <td align="right" style="width: 20%">
+              <label class="control-label">Site code:</label>&nbsp;&nbsp;&nbsp;
+            </td>
+            <td>
+              <input name="site_code" class="form-control" placeholder="Site code" id="site_code" required="" value="" type="text" />
+            </td>
+          </tr>
+        </table>
+      </div>
+
       <div class="form-control-group">
         <table style="width: 100%;">
           <tr>
