--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title></title>
+    <%=javascript_include_tag "bootstrap-tree/jquery-1.8.2"%>
     <base target="_parent"/>
     <style>
       body {
@@ -104,68 +105,91 @@
       var timerSpacing = 40;
 
 
-    <% (@sites || []).each do |site| %>
-        sites.push('<%= site.name.downcase %>')
-    <% end %>
+<% (@sites || []).each do |site| %>
+    sites.push('<%= site.name.downcase %>')
+<% end %>
 
-      function __$(id){
-        return document.getElementById(id);
-      }
+  function __$(id){
+    return document.getElementById(id);
+  }
 
-      var previousCircle = '';
-      function switchViews(){
-        clearTimeout(timerHnd);
-        if (typeof(blinkInterval) != 'undefined')clearInterval(blinkInterval);
-        //window.frames['main-display'].contentDocument.getElementById(sites[current_pos].toLowerCase()).style.fill= "red"
+  var previousCircle = '';
+  function switchViews(){
+    clearTimeout(timerHnd);
+    if (typeof(blinkInterval) != 'undefined')clearInterval(blinkInterval);
+    //window.frames['main-display'].contentDocument.getElementById(sites[current_pos].toLowerCase()).style.fill= "red"
 
-        if ((current_pos + 1) >= sites.length)
-        {
-          current_pos = 0;
-        }
-        else
-        {
-          current_pos += 1;
-        }
+    if ((current_pos + 1) >= sites.length)
+    {
+      current_pos = 0;
+    }
+    else
+    {
+      current_pos += 1;
+    }
 
-        //window.frames['main-display'].contentDocument.getElementById(sites[current_pos].toLowerCase()).style.fill= "green"
+    //window.frames['main-display'].contentDocument.getElementById(sites[current_pos].toLowerCase()).style.fill= "green"
 
-        __$("report-display").setAttribute("src", "/report/months_of_stock_main?site="+ sites[current_pos]);
+    __$("report-display").setAttribute("src", "/report/months_of_stock_main?site="+ sites[current_pos]);
 
-        mainDisplay = document.getElementById('main-display').contentDocument;
-        facility = mainDisplay.getElementById("map").contentDocument.getElementById(sites[current_pos]);
-        if (previousCircle != ''){
-          previousCircle.setAttribute("fill", previousColor);
-          clearInterval(blinkInterval);
-        }
+    mainDisplay = document.getElementById('main-display').contentDocument;
+    facility = mainDisplay.getElementById("map").contentDocument.getElementById(sites[current_pos]);
+    if (previousCircle != ''){
+      previousCircle.setAttribute("fill", previousColor);
+      clearInterval(blinkInterval);
+    }
 
-        if (facility){
-          circle = facility;
-          previousCircle = circle;
-          previousColor = previousCircle.getAttribute("fill");
-        }
+    if (facility){
+      circle = facility;
+      previousCircle = circle;
+      previousColor = previousCircle.getAttribute("fill");
+    }
 
-        blinkInterval = window.setInterval("BlinkIt()", 300);
+    blinkInterval = window.setInterval("BlinkIt()", 300);
 
-        resizeTable()
-        timerHnd = setTimeout("switchViews()", timerSpacing * 1000);
-      }
+    resizeTable()
+    timerHnd = setTimeout("switchViews()", timerSpacing * 1000);
+  }
 
-      function resizeTable(){
-        __$("main").style.height = "83vh";
+  function resizeTable(){
+    __$("main").style.height = "83vh";
 
-        __$("main-display").style.height = "85vh";
+    __$("main-display").style.height = "85vh";
 
-        __$("report-display").style.height = "90vh";
+    __$("report-display").style.height = "90vh";
 
-        __$("main-display").style.width = "100%";
+    __$("main-display").style.width = "100%";
 
-        __$("report-display").style.width = "100%";
-      }
+    __$("report-display").style.width = "100%";
+  }
 
-      timerHnd = setTimeout("switchViews()", timerSpacing * 1000);
+  timerHnd = setTimeout("switchViews()", timerSpacing * 1000);
 
-      //-->
+  //-->
     </script>
 
+    <script type="text/javascript">
+      function listenToCouchChangesFeed() {
+        jQuery.ajax({
+          type: "GET",
+          url: "/get_couch_changes",
+          success: function(results){
+
+          }
+
+        });
+
+      }
+
+      listenToCouchChangesFeed();
+
+
+      window.setInterval(function(){
+        listenToCouchChangesFeed();
+      }, 1000 * 60 * 60); //Run it every hour 1000 * 60 * 60
+
+
+
+    </script>
   </body>
 </html>
